View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026781 | Open CASCADE | OCCT:Coding | public | 2015-10-16 10:08 | 2016-04-20 15:51 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | OS | Debian 6.0 | ||
Product Version | 6.9.1 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026781: Coding rules - eliminate GCC warning -Wunused-result | ||||
Description | gcc 4.9.2 generates the following warnings which should be eliminated:/occt/src/FSD/FSD_BinaryFile.cxx:171:40: warning: ignoring return value of ‘size_t fread(void*, size_t, size_t, FILE*)’, declared with attribute warn_unused_result [-Wunused-result] /occt/src/OSD/OSD_File.cxx:753:16: warning: ignoring return value of ‘int system(const char*)’, declared with attribute warn_unused_result [-Wunused-result] /occt/src/OSD/OSD_Process.cxx:42:25: warning: ignoring return value of ‘int system(const char*)’, declared with attribute warn_unused_result [-Wunused-result] /occt/src/RWStl/RWStl.cxx:498:27: warning: ignoring return value of ‘int fscanf(FILE*, const char*, ...)’, declared with attribute warn_unused_result [-Wunused-result] /occt/src/RWStl/RWStl.cxx:519:23: warning: ignoring return value of ‘int fscanf(FILE*, const char*, ...)’, declared with attribute warn_unused_result [-Wunused-result] /occt/src/RWStl/RWStl.cxx:522:23: warning: ignoring return value of ‘int fscanf(FILE*, const char*, ...)’, declared with attribute warn_unused_result [-Wunused-result] /occt/src/IFSelect/IFSelect_SessionFile.cxx:121:27: warning: ignoring return value of ‘char* fgets(char*, int, FILE*)’, declared with attribute warn_unused_result [-Wunused-result] /occt/src/IFSelect/IFSelect_SessionPilot.cxx:245:25: warning: ignoring return value of ‘char* fgets(char*, int, FILE*)’, declared with attribute warn_unused_result [-Wunused-result] /occt/src/IGESFile/liriges.c:47:7: warning: ignoring return value of ‘fgets’, declared with attribute warn_unused_result [-Wunused-result] /occt/src/IGESFile/liriges.c:56:7: warning: ignoring return value of ‘fgets’, declared with attribute warn_unused_result [-Wunused-result] /occt/src/IGESFile/liriges.c:64:9: warning: ignoring return value of ‘fgets’, declared with attribute warn_unused_result [-Wunused-result] /occt/src/IGESFile/liriges.c:70:9: warning: ignoring return value of ‘fgets’, declared with attribute warn_unused_result [-Wunused-result] | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26781 has been created by rkv. SHA-1: 51d0bce5c5ce7f3200e2ca9ce8b36a0d8f1c627b Detailed log of new commits: Author: rkv Date: Fri Oct 23 17:12:54 2015 +0300 26781: Coding rules - eliminate GCC warning -Wunused-result Author: rkv Date: Fri Oct 23 15:26:06 2015 +0300 26781: Coding rules - eliminate GCC warning -Wunused-result Take into account return results of fread, lp/lpr and spawn. |
|
Branch CR26781 has been updated forcibly by rkv. SHA-1: 5610161c7f02a5573f2e3bfebd329b17c37e1ddf |
|
Branch CR26781_1 has been created by kgv. SHA-1: 40744a0dbf8c52df1846fdfadc00d2c90315ee17 Detailed log of new commits: Author: rkv Date: Fri Oct 23 22:24:21 2015 +0300 0026781: Coding rules - eliminate GCC warning -Wunused-result Check return code of fgets() and system() within FSD_BinaryFile::ReadChar(), IFSelect_SessionFile::ReadFile(), IFSelect_SessionPilot::ReadScript(), OSD_File::Print(), OSD_Process::Spawn(), RWStl::ReadAscii(), iges_lire(). |
|
Please test the patch in branch CR26781_1. |
|
Dear BugMaster, Branch CR26781_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 40744a0dbf8c52df1846fdfadc00d2c90315ee17 Number of compiler warnings: occt component: Linux: 1 (1 on master) Windows: 0 (0 on master) products component: Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences: http://occt-tests/CR26781-1-master-occt-64/Debian70-64/summary.html http://occt-tests/CR26781-1-master-occt-64/Windows-64-VC10/summary.html 3rdparty export A1 bugs fclasses bug23192_2 bugs vis bug10702, bug10781, bug21091_3, bug26566 bugs xde bug22670_1, bug22670_2, bug23193 v3d mesh A6 Testing cases: Not needed Testing on Linux: Total MEMORY difference: 91913649 / 92162974 [-0.27%] Total CPU difference: 19539.32999999979 / 19472.82999999968 [+0.34%] Testing on Windows: Total MEMORY difference: 57977854 / 57991587 [-0.02%] Total CPU difference: 18073.745456598954 / 18130.54542069902 [-0.31%] There are following differences in images found by testdiff: http://occt-tests/CR26781-1-master-occt-64/Debian70-64/diff-Debian70-64.html http://occt-tests/CR26781-1-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html v3d mesh A3 v3d mesh A1 v3d mesh A7 v3d mesh A4 v3d mesh A5 v3d mesh A2 v3d mesh A8 bugs vis bug26028 bugs vis bug11095 |
|
Dear kgv, Branch CR26781_1 has been rejected due to: - regressions/differences/improvements - differences in images |
|
Branch CR26781_1 has been updated by rkv. SHA-1: 438b0cf5bce58e7b7bbc579e9a041b4ecfb4af97 Detailed log of new commits: Author: rkv Date: Wed Oct 28 10:06:31 2015 +0300 0026781: Coding rules - eliminate GCC warning -Wunused-result fscanf result analysis has been fixed. |
|
Branch CR26781_2 has been created by kgv. SHA-1: 6556de6970941d90a91f74aecb600bfdd6fe2156 Detailed log of new commits: Author: rkv Date: Wed Oct 28 10:13:28 2015 +0300 0026781: Coding rules - eliminate GCC warning -Wunused-result Check return code of fgets() and system() within FSD_BinaryFile::ReadChar(), IFSelect_SessionFile::ReadFile(), IFSelect_SessionPilot::ReadScript(), OSD_File::Print(), OSD_Process::Spawn(), RWStl::ReadAscii(), iges_lire(). |
|
Please test patch in branch CR26781_2. |
|
Dear BugMaster, Branch CR26781_2 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 6556de6970941d90a91f74aecb600bfdd6fe2156 Number of compiler warnings: occt component : Linux: 1 (1 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 92295428 / 92331718 [-0.04%] Total CPU difference: 19808.43999999988 / 19731.429999999687 [+0.39%] products component : Total MEMORY difference: 26207568 / 26272952 [-0.25%] Total CPU difference: 7560.719999999963 / 7371.560000000013 [+2.57%] Testing on Windows: occt component : Total MEMORY difference: 58043335 / 58043302 [+0.00%] Total CPU difference: 18639.670284298914 / 18133.197437699022 [+2.79%] products component : Total MEMORY difference: 17162804 / 17167510 [-0.03%] Total CPU difference: 5651.697828599987 / 5658.655473199974 [-0.12%] There are no differences in images found by testdiff. |
|
Dear BugMaster, Branch CR26781_2 is TESTED. |
|
Branch CR26781 has been deleted by kgv. SHA-1: 5610161c7f02a5573f2e3bfebd329b17c37e1ddf |
|
Branch CR26781_1 has been deleted by kgv. SHA-1: 438b0cf5bce58e7b7bbc579e9a041b4ecfb4af97 |
|
Branch CR26781_2 has been deleted by kgv. SHA-1: 6556de6970941d90a91f74aecb600bfdd6fe2156 |
occt: master 98160038 2015-10-28 07:13:28
Committer: bugmaster Details Diff |
0026781: Coding rules - eliminate GCC warning -Wunused-result Check return code of fgets() and system() within FSD_BinaryFile::ReadChar(), IFSelect_SessionFile::ReadFile(), IFSelect_SessionPilot::ReadScript(), OSD_File::Print(), OSD_Process::Spawn(), RWStl::ReadAscii(), iges_lire(). |
Affected Issues 0026781 |
|
mod - src/FSD/FSD_BinaryFile.cxx | Diff File | ||
mod - src/IFSelect/IFSelect_SessionFile.cxx | Diff File | ||
mod - src/IFSelect/IFSelect_SessionPilot.cxx | Diff File | ||
mod - src/IGESFile/liriges.c | Diff File | ||
mod - src/OSD/OSD_File.cxx | Diff File | ||
mod - src/OSD/OSD_Process.cxx | Diff File | ||
mod - src/OSD/OSD_Process.hxx | Diff File | ||
mod - src/RWStl/RWStl.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-10-16 10:08 | kgv | New Issue | |
2015-10-16 10:08 | kgv | Assigned To | => kgv |
2015-10-16 10:08 | kgv | Relationship added | related to 0026710 |
2015-10-16 10:08 | kgv | Relationship replaced | parent of 0026710 |
2015-10-16 10:09 | kgv | Assigned To | kgv => rkv |
2015-10-16 10:09 | kgv | Status | new => assigned |
2015-10-23 17:15 | git | Note Added: 0047401 | |
2015-10-23 17:17 | git | Note Added: 0047402 | |
2015-10-23 17:18 |
|
Assigned To | rkv => kgv |
2015-10-23 17:18 |
|
Status | assigned => resolved |
2015-10-23 22:25 | git | Note Added: 0047407 | |
2015-10-23 22:26 | kgv | Note Added: 0047408 | |
2015-10-23 22:26 | kgv | Assigned To | kgv => bugmaster |
2015-10-23 22:26 | kgv | Status | resolved => reviewed |
2015-10-26 12:09 |
|
Assigned To | bugmaster => apv |
2015-10-26 12:42 |
|
Test case number | => Not needed |
2015-10-27 13:17 |
|
Note Added: 0047478 | |
2015-10-27 13:17 |
|
Assigned To | apv => kgv |
2015-10-27 13:17 |
|
Status | reviewed => assigned |
2015-10-27 13:18 |
|
Note Edited: 0047478 | |
2015-10-27 13:20 |
|
Note Added: 0047479 | |
2015-10-27 13:41 | kgv | Assigned To | kgv => rkv |
2015-10-27 14:55 |
|
Note Edited: 0047478 | |
2015-10-28 10:06 | git | Note Added: 0047506 | |
2015-10-28 10:07 |
|
Assigned To | rkv => kgv |
2015-10-28 10:07 |
|
Status | assigned => resolved |
2015-10-28 10:14 | git | Note Added: 0047507 | |
2015-10-28 10:15 | kgv | Note Added: 0047509 | |
2015-10-28 10:15 | kgv | Assigned To | kgv => bugmaster |
2015-10-28 10:15 | kgv | Status | resolved => reviewed |
2015-10-28 12:46 |
|
Assigned To | bugmaster => mkv |
2015-10-29 14:18 |
|
Note Added: 0047598 | |
2015-10-29 14:18 |
|
Assigned To | mkv => bugmaster |
2015-10-29 14:18 |
|
Status | reviewed => tested |
2015-10-29 14:19 |
|
Note Added: 0047599 | |
2015-10-30 16:00 | bugmaster | Changeset attached | => occt master 98160038 |
2015-10-30 16:00 | bugmaster | Status | tested => verified |
2015-10-30 16:00 | bugmaster | Resolution | open => fixed |
2016-04-17 14:30 | git | Note Added: 0053180 | |
2016-04-17 14:30 | git | Note Added: 0053181 | |
2016-04-17 14:30 | git | Note Added: 0053182 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:51 |
|
Status | verified => closed |