src/FSD/FSD_BinaryFile.cxx
@@ -168,9 +168,8 @@ void FSD_BinaryFile::ReadChar(TCollection_AsciiString& buffer, const Standard_Si
   buffer.Clear();
 
   while (!IsEnd() && (ccount < rsize)) {
-    fread(&c, sizeof(char),1, myStream);
+    ccount += fread(&c, sizeof(char),1, myStream);
     buffer += c;
-    ccount++;
   }
 }
 
