src/IGESFile/liriges.c
@@ -44,7 +44,10 @@ int  iges_lire (FILE* lefic, int *numsec, char ligne[100], int modefnes)
 
     ligne[0] = '\0'; 
     if(modefnes)
-      fgets(ligne,99,lefic); /*for kept compatibility with fnes*/
+    {
+      if (fgets(ligne,99,lefic) == NULL) /*for kept compatibility with fnes*/
+        return 0;
+    }
     else
     {
       /* PTV: 21.03.2002 it is neccessary for files that have only `\r` but no `\n` 
@@ -53,7 +56,8 @@ int  iges_lire (FILE* lefic, int *numsec, char ligne[100], int modefnes)
       {
       }
       
-      fgets(&ligne[1],80,lefic);
+      if (fgets(&ligne[1],80,lefic) == NULL)
+        return 0;
     }
     
     if (*numsec == 0 && ligne[72] != 'S' && ligne[79] == ' ')
@@ -61,13 +65,17 @@ int  iges_lire (FILE* lefic, int *numsec, char ligne[100], int modefnes)
       ligne[0] = '\0';
       
       if(modefnes)
-        fgets(ligne,99,lefic);/*for kept compatibility with fnes*/
+      {
+        if (fgets(ligne,99,lefic) == NULL) /*for kept compatibility with fnes*/
+          return 0;
+      }
       else
       {
         while ( fgets ( ligne, 2, lefic ) && ( ligne[0] == '\r' || ligne[0] == '\n' ) )
         {
         }
-        fgets(&ligne[1],80,lefic);
+        if (fgets(&ligne[1],80,lefic) == NULL)
+          return 0;
       }
     }
 
