src/RWStl/RWStl.cxx
@@ -495,7 +495,8 @@ Handle(StlMesh_Mesh) RWStl::ReadAscii (const OSD_Path& thePath,
     gp_XYZ aN (Atof(x), Atof(y), Atof(z));
 
     // skip the keywords "outer loop"
-    fscanf(file,"%*s %*s");
+    if (fscanf(file,"%*s %*s") < 0)
+      break;
 
     // reading vertex
     if (3 != fscanf(file,"%*s %80s %80s %80s\n", x, y, z))
@@ -516,10 +517,12 @@ Handle(StlMesh_Mesh) RWStl::ReadAscii (const OSD_Path& thePath,
     ReadMesh->AddTriangle (i1, i2, i3, aN.X(), aN.Y(), aN.Z());
 
     // skip the keywords "endloop"
-    fscanf(file,"%*s");
+    if (fscanf(file,"%*s") < 0)
+      break;
 
     // skip the keywords "endfacet"
-    fscanf(file,"%*s");
+    if (fscanf(file,"%*s") < 0)
+      break;
 
     // update progress only per 1k triangles
     if (++iTri % IND_THRESHOLD == 0)
